RESOLVED FIXED110848
REGRESSION(r143981): Crash in WebFrameLoaderClient::dispatchDidStartProvisionalLoad()
https://bugs.webkit.org/show_bug.cgi?id=110848
Summary REGRESSION(r143981): Crash in WebFrameLoaderClient::dispatchDidStartProvision...
Jer Noble
Reported 2013-02-25 22:43:17 PST
REGRESSION(r143981): Crash in WebFrameLoaderClient::dispatchDidStartProvisionalLoad()
Attachments
Patch (1.74 KB, patch)
2013-02-25 23:13 PST, Jer Noble
rniwa: review+
Jer Noble
Comment 1 2013-02-25 23:13:55 PST
Jer Noble
Comment 2 2013-02-25 23:15:00 PST
No crashes on `run-webkit-tests` or `run-webkit-tests -2`.
Jer Noble
Comment 3 2013-02-25 23:44:50 PST
Note You need to log in before you can comment on or make changes to this bug.