REGRESSION(r143981): Crash in WebFrameLoaderClient::dispatchDidStartProvisionalLoad() https://bugs.webkit.org/show_bug.cgi?id=110848

Reviewed by Ryosuke Niwa.

NULL-check the result of document->documentElement().

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDidStartProvisionalLoad):

Canonical link: https://commits.webkit.org/129114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144011 268f45cc-cd09-0410-ab3c-d52691b4dbfc